[gd_scene load_steps=65 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/BoardPosition.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/GameScene/TABLE.png" type="Texture" id=3]
[ext_resource path="res://Sounds/rock-destroy-6409.wav" type="AudioStream" id=4]
[ext_resource path="res://Foguin2.png" type="Texture" id=5]
[ext_resource path="res://Scripts/AIManager.gd" type="Script" id=6]
[ext_resource path="res://Sprites/GameScene/BGCOLOR.png" type="Texture" id=7]
[ext_resource path="res://Scripts/GameAnimationManager.gd" type="Script" id=8]
[ext_resource path="res://Foguin3.png" type="Texture" id=9]
[ext_resource path="res://Sounds/cavein.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/hmm.wav" type="AudioStream" id=11]
[ext_resource path="res://Foguin.png" type="Texture" id=12]
[ext_resource path="res://Sprites/GameScene/PessoaNormal.png" type="Texture" id=13]
[ext_resource path="res://Sprites/GameScene/DemonKing_AI.png" type="Texture" id=14]
[ext_resource path="res://Sounds/fire-sound-efftect-21991.mp3" type="AudioStream" id=15]
[ext_resource path="res://Sprites/StartScreen/VoltarAoMenuClicked.png" type="Texture" id=16]
[ext_resource path="res://Sprites/StartScreen/VoltarAoMenuNormal.png" type="Texture" id=17]

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 384, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 448, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 384, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 448, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 384, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 448, 256, 64, 128 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 384, 384, 64, 128 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 448, 384, 64, 128 )

[sub_resource type="SpriteFrames" id=87]
animations = [ {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 512 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 512 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 512 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 512 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 512 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 512 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 512, 42 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 42, 512, 42 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 84, 512, 42 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 126, 512, 42 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 168, 512, 42 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 210, 512, 42 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GameScene" type="Node2D"]

[node name="Tabuleiro" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 351, 120 )
script = ExtResource( 1 )

[node name="Bgcolor" type="Sprite" parent="Tabuleiro"]
position = Vector2( 161.5, 179.75 )
scale = Vector2( 0.425417, 0.251458 )
texture = ExtResource( 7 )

[node name="FogoDaMesa" type="AnimatedSprite" parent="Tabuleiro"]
position = Vector2( -975, -574.3 )
scale = Vector2( 3.94922, 4.41043 )
frames = SubResource( 87 )
frame = 4
speed_scale = 10.0
playing = true
offset = Vector2( 159.09, 84.1262 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Tabuleiro/FogoDaMesa"]
position = Vector2( -2.64597, 24.7922 )
frames = SubResource( 87 )
frame = 4
speed_scale = 10.0
playing = true
offset = Vector2( 159.09, 84.1262 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Tabuleiro/FogoDaMesa"]
position = Vector2( -0.992218, 60.1697 )
frames = SubResource( 87 )
frame = 5
speed_scale = 10.0
playing = true
offset = Vector2( 159.09, 84.1262 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Tabuleiro/FogoDaMesa"]
position = Vector2( -0.992218, 88.5832 )
frames = SubResource( 87 )
frame = 5
speed_scale = 10.0
playing = true
offset = Vector2( 159.09, 84.1262 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Tabuleiro/FogoDaMesa"]
position = Vector2( 158.429, 213.38 )
frames = SubResource( 87 )
frame = 5
speed_scale = 10.0
playing = true
offset = Vector2( 0, -10.864 )

[node name="FogoDaMesa2" type="AnimatedSprite" parent="Tabuleiro"]
position = Vector2( -13.9999, -562 )
scale = Vector2( 3.94922, 4.41043 )
frames = SubResource( 87 )
frame = 4
speed_scale = 10.0
playing = true
offset = Vector2( 159.09, 84.1262 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Tabuleiro/FogoDaMesa2"]
position = Vector2( -2.64597, 24.7922 )
frames = SubResource( 87 )
frame = 4
speed_scale = 10.0
playing = true
offset = Vector2( 159.09, 84.1262 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Tabuleiro/FogoDaMesa2"]
position = Vector2( -0.992218, 60.1697 )
frames = SubResource( 87 )
frame = 5
speed_scale = 10.0
playing = true
offset = Vector2( 159.09, 84.1262 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Tabuleiro/FogoDaMesa2"]
position = Vector2( -0.992218, 88.5832 )
frames = SubResource( 87 )
frame = 17
speed_scale = 10.0
playing = true
offset = Vector2( 159.09, 84.1262 )

[node name="Table" type="Sprite" parent="Tabuleiro"]
position = Vector2( 153.313, 169.797 )
scale = Vector2( 0.290573, 0.257331 )
texture = ExtResource( 3 )

[node name="0,0" parent="Tabuleiro" instance=ExtResource( 2 )]
position = Vector2( -48, -26 )
texturas = [ null, ExtResource( 13 ), ExtResource( 14 ) ]

[node name="0,1" parent="Tabuleiro" instance=ExtResource( 2 )]
position = Vector2( 134, -21 )
texturas = [ null, ExtResource( 13 ), ExtResource( 14 ) ]

[node name="0,2" parent="Tabuleiro" instance=ExtResource( 2 )]
position = Vector2( 311, -23 )
texturas = [ null, ExtResource( 13 ), ExtResource( 14 ) ]

[node name="1,0" parent="Tabuleiro" instance=ExtResource( 2 )]
position = Vector2( -60, 135 )
texturas = [ null, ExtResource( 13 ), ExtResource( 14 ) ]

[node name="1,1" parent="Tabuleiro" instance=ExtResource( 2 )]
position = Vector2( 122, 143 )
texturas = [ null, ExtResource( 13 ), ExtResource( 14 ) ]

[node name="1,2" parent="Tabuleiro" instance=ExtResource( 2 )]
position = Vector2( 315, 142 )
texturas = [ null, ExtResource( 13 ), ExtResource( 14 ) ]

[node name="2,0" parent="Tabuleiro" instance=ExtResource( 2 )]
position = Vector2( -49, 294 )
texturas = [ null, ExtResource( 13 ), ExtResource( 14 ) ]

[node name="2,1" parent="Tabuleiro" instance=ExtResource( 2 )]
position = Vector2( 113, 304 )
texturas = [ null, ExtResource( 13 ), ExtResource( 14 ) ]

[node name="2,2" parent="Tabuleiro" instance=ExtResource( 2 )]
position = Vector2( 298, 309 )
texturas = [ null, ExtResource( 13 ), ExtResource( 14 ) ]

[node name="RockCollision" type="AudioStreamPlayer2D" parent="Tabuleiro"]
position = Vector2( -192, 194 )
stream = ExtResource( 4 )

[node name="thinking" type="AudioStreamPlayer2D" parent="Tabuleiro"]
stream = ExtResource( 11 )

[node name="AIMANAGER" type="Node" parent="Tabuleiro"]
script = ExtResource( 6 )

[node name="SceneManager" type="Node" parent="Tabuleiro"]
script = ExtResource( 8 )

[node name="ColunaDireita" type="AnimatedSprite" parent="Tabuleiro/SceneManager"]
visible = false
position = Vector2( 658, 388 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 33 )
speed_scale = 2.0

[node name="ColunaEsquerda" type="AnimatedSprite" parent="Tabuleiro/SceneManager"]
visible = false
position = Vector2( 285, 388 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 33 )
speed_scale = 2.0

[node name="ColunaCentral" type="AnimatedSprite" parent="Tabuleiro/SceneManager"]
visible = false
position = Vector2( 484, 388 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 33 )
speed_scale = 2.0

[node name="LinhaSuperior" type="AnimatedSprite" parent="Tabuleiro/SceneManager"]
visible = false
position = Vector2( 598.5, 84 )
scale = Vector2( 1.64648, 2 )
frames = SubResource( 48 )
speed_scale = 2.0

[node name="LinhaCentral" type="AnimatedSprite" parent="Tabuleiro/SceneManager"]
visible = false
position = Vector2( 598.5, 264 )
scale = Vector2( 1.64648, 2 )
frames = SubResource( 48 )
speed_scale = 2.0

[node name="LinhaInferior" type="AnimatedSprite" parent="Tabuleiro/SceneManager"]
visible = false
position = Vector2( 596, 432 )
scale = Vector2( 1.59766, 2 )
frames = SubResource( 48 )
speed_scale = 2.0

[node name="DiagonalDireita" type="AnimatedSprite" parent="Tabuleiro/SceneManager"]
visible = false
position = Vector2( 365.583, 369.887 )
rotation = 0.872665
scale = Vector2( 2.17838, 2 )
frames = SubResource( 33 )
speed_scale = 2.0

[node name="DiagonalEsquerda" type="AnimatedSprite" parent="Tabuleiro/SceneManager"]
visible = false
position = Vector2( 602.021, 378.207 )
rotation = -0.872665
scale = Vector2( 2.04715, 2 )
frames = SubResource( 33 )
speed_scale = 2.0

[node name="Slide" type="AudioStreamPlayer2D" parent="Tabuleiro/SceneManager"]
position = Vector2( 384, 275 )
stream = ExtResource( 10 )
volume_db = 0.147

[node name="Fire" type="AudioStreamPlayer2D" parent="Tabuleiro"]
stream = ExtResource( 15 )
volume_db = -10.0
autoplay = true

[node name="VoltarAoMenu" type="TextureButton" parent="Tabuleiro"]
margin_left = 398.0
margin_top = 401.0
margin_right = 678.0
margin_bottom = 476.0
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 16 )
texture_focused = ExtResource( 17 )

[connection signal="pressed" from="Tabuleiro/VoltarAoMenu" to="Tabuleiro" method="_on_VoltarAoMenu_pressed"]
